--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Webnews"
 meta_title: "Webnews - L'actualité du web"
 meta_description: "Toute l'actualité intéressante du web se trouve ici !"
-meta_image: "homepage.jpeg"
+meta_image: "homepage.jpg"
